--- a/src/components/navbar/Navbarpage.css
+++ b/src/components/navbar/Navbarpage.css
@@ -47,8 +47,8 @@
 
 .nav-links li .nav-link {
   color: rgb(255, 255, 255);
-  padding: 10px 30px;
-  border-bottom: 3px solid white;
+  padding: 5px 30px;
+  /* border-bottom: 3px solid white; */
   border-radius: 15px;
   transition: all 0.3s ease;
   font-size: 1.1rem;
@@ -61,8 +61,9 @@
   min-width: 100%;
   text-decoration: none;
   cursor: pointer;
-  border-bottom: 2px solid white;
-  border-top: 3px solid white;
+  /* border-bottom: 2px solid white;
+  border-top: 3px solid white; */
+
   border-left: 3px solid white;
   border-right: 3px solid white;
 }
@@ -100,7 +101,7 @@
   justify-content: flex-start;
   align-items: center;
 }
-@media (max-width: 992px) {
+@media (max-width: 1025px) {
   .navbar {
     display: none;
   }
@@ -180,7 +181,7 @@
     transform: translateY(20px);
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 1025px) {
   .navbar {
     margin: 0;
     height: 10vh;
